# handlegraph-ffi-test

./: Cargo.toml  Makefile  readme.md  run
src/: lib.rs  main.cpp  main.rs  test_lib.h
