[package]
name = "handlegraph-ffi"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = "0.8"
# gfa = { path = "../rs-gfa" }
handlegraph = { path = "../rs-handlegraph" }
# bytemuck_derive = "1.0.0"
libc = "0.2"


[lib]
name = "handlegraph_ffi"
crate-type = ["dylib"]