[package]
name = "handlegraph-ffi"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = "0.8"
handlegraph = { git = "https://github.com/chfi/rs-handlegraph", rev = "dc2e8b010e96a6e4554c2113df4ad540da05f8ef" }
libc = "0.2"


[lib]
name = "handlegraph_ffi"
crate-type = ["dylib"]
